@@ -1,0 +1,16 @@
+<?php
+
+namespace Krzysztofzylka\MicroFramework\Extra;
+
+enum ObjectTypeEnum
+{
+
+     case APP;
+
+     case PA;
+
+     case PA_LOCAL;
+
+     case API;
+
+}
